--- a/FD-main/src/main/resources/application.properties
+++ b/FD-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.datasource.url=jdbc:mysql://localhost/demo?characterEncoding=UTF8&autoReconnect=true&serverTimezone=UTC&allowMultiQueries=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/demo?characterEncoding=UTF8&autoReconnect=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=C0nygre-C0nygre
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
